--- a/test.ipynb
+++ b/test.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,21 +608,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "전체: 4957\n",
-      "옳은 것은? (단일 선택): 1963\n",
-      "옳지 않은 것은? (단일 선택): 2672\n",
-      "옳은 것을 모두 고른 것은? (다중 선택): 322\n",
-      "갯수 일치 여부: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "multiple = first_exam + second_exam + third_exam + fourth_exam + fifth_exam\n",
     "\n",
@@ -681,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,12 +700,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "# random.seed(42)\n",
+    "random.seed(42)\n",
     "user_prompt = ''\n",
     "\n",
     "to_json = []\n",
@@ -752,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,48 +753,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/anaconda3/envs/aic/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO 11-09 21:33:42 [__init__.py:216] Automatically detected platform cpu.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-09 21:33:44,177 - INFO - 출력 디렉토리: /Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation_yejin/eval_data/multiple_with_subdomain\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
-      "/Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
-      "[DEBUG] Config file path: /Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-09 21:33:44,888 - INFO - HTTP Request: POST https://openrouter.ai/api/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tools.QueryModels import query_openrouter\n",
     "from tools.evaluation import qna_subdomain_classifier\n",
@@ -834,12 +783,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "system_prompt = \"\"\"\n",
-    "당신은 15년 경력의 문제 출제 경험이 뛰어난 전문가입니다.\n",
+    "당신은 문제 출제 경험이 뛰어난 전문가입니다.\n",
     "다음 문제는 선택지가 모두 옳은 것으로, 모두 옳지 않은 선지로 변형해야 합니다.\n",
     "주어진 선택지들과 해설을 보고, 문장의 역/이/대우를 활용하여 옳지 않은 선택지로 변형하세요.\n",
     "이때 변형은 선택지의 단어를 바꿔 할루시네이션을 최소화해야 합니다. (ex. 높은 -> 낮은, 없다 -> 있다)\n",
@@ -865,77 +814,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-09 21:42:30,553 - INFO - 출력 디렉토리: /Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation_yejin/eval_data/multiple_with_subdomain\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
-      "[DEBUG] Config file path: /Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-09 21:42:34,176 - INFO - HTTP Request: POST https://openrouter.ai/api/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
-      "[DEBUG] Config file path: /Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-09 21:44:54,706 - INFO - HTTP Request: POST https://openrouter.ai/api/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
-      "[DEBUG] Config file path: /Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-09 21:51:11,461 - INFO - HTTP Request: POST https://openrouter.ai/api/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/tools\n",
-      "[DEBUG] Config file path: /Users/yejin/Desktop/Desktop_AICenter✨/SFAIcenter/llm_config.ini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-09 21:52:01,272 - INFO - HTTP Request: POST https://openrouter.ai/api/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -1048,10 +929,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### evaluation 파일 수정하고 다시 돌리기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Excel 파일 업데이트 완료: /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gemini-2.0-flash-001.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "# Excel 파일에서 정확도 계산 (전체, subject별, domain별, subdomain별)\n",
     "import pandas as pd\n",
@@ -1060,11 +956,20 @@
     "import ast\n",
     "\n",
     "# Excel 파일 경로 설정\n",
-    "excel_path = '/home/yjmoon/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_EXAONE-4.0-32B.xlsx'\n",
+    "excel_path = '/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gemini-2.0-flash-001.xlsx'\n",
     "\n",
     "# Excel 파일 읽기\n",
     "df_sample = pd.read_excel(excel_path, sheet_name='전체데이터')\n",
-    "pred_long = pd.read_excel(excel_path, sheet_name='모델별예측')\n",
+    "pred_wide = pd.read_excel(excel_path, sheet_name='모델별예측')\n",
+    "\n",
+    "# pred_wide를 pred_long 형식으로 변환 (melt 사용)\n",
+    "# pred_wide는 id 컬럼과 각 모델명이 컬럼으로 있는 와이드 포맷\n",
+    "# pred_long은 id, model_name, answer 컬럼이 있는 롱 포맷\n",
+    "pred_long = pred_wide.melt(\n",
+    "    id_vars=['id'],  # id 컬럼은 그대로 유지\n",
+    "    var_name='model_name',  # 모델명 컬럼 이름\n",
+    "    value_name='answer'  # 예측값 컬럼 이름\n",
+    ")\n",
     "\n",
     "# answer_set을 Set[int]로 변환하는 헬퍼 함수\n",
     "def _parse_answer_set(answer_set):\n",
@@ -1111,110 +1016,96 @@
     "    .sort_values(\"accuracy\", ascending=False)\n",
     ")\n",
     "\n",
-    "print(\"=\" * 80)\n",
-    "print(\"📊 전체 정확도\")\n",
-    "print(\"=\" * 80)\n",
-    "for _, row in acc_by_model.iterrows():\n",
-    "    print(f\"  {row['model_name']}: {row['accuracy']:.3f} ({row['accuracy']*100:.1f}%)\")\n",
-    "print()\n",
+    "# Excel 파일에 결과 저장\n",
+    "# 기존 파일을 읽어서 모든 시트를 유지하면서 특정 시트만 업데이트\n",
+    "from openpyxl import load_workbook\n",
     "\n",
-    "# subject별 정확도 계산 (subject 컬럼이 있는 경우)\n",
-    "if 'subject' in df_sample.columns:\n",
-    "    subject_info = df_sample[[\"id\", \"subject\"]].copy()\n",
-    "    merged_with_subject = merged.merge(subject_info, on=\"id\", how=\"left\")\n",
-    "    \n",
-    "    subject_acc = (\n",
-    "        merged_with_subject.groupby([\"subject\", \"model_name\"], dropna=False)[\"correct\"]\n",
-    "        .mean()\n",
-    "        .reset_index()\n",
-    "        .pivot(index=\"subject\", columns=\"model_name\", values=\"correct\")\n",
-    "        .reset_index()\n",
-    "    )\n",
-    "    \n",
-    "    print(\"=\" * 80)\n",
-    "    print(\"📚 Subject별 정확도\")\n",
-    "    print(\"=\" * 80)\n",
-    "    print(subject_acc.to_string(index=False))\n",
-    "    print()\n",
-    "    \n",
-    "    # Subject별 문제 수 통계\n",
-    "    subject_stats = df_sample.groupby('subject').size().reset_index(name='question_count')\n",
-    "    print(\"=\" * 80)\n",
-    "    print(\"📈 Subject별 문제 수\")\n",
-    "    print(\"=\" * 80)\n",
-    "    print(subject_stats.to_string(index=False))\n",
-    "    print()\n",
+    "# 기존 파일의 모든 시트 읽기 (업데이트할 시트 제외)\n",
+    "existing_sheets = {}\n",
+    "try:\n",
+    "    book = load_workbook(excel_path)\n",
+    "    for sheet_name in book.sheetnames:\n",
+    "        if sheet_name not in [\"전체데이터\", \"모델별예측\", \"정확도\", \"Subject별정확도\", \"Subject별문제수\", \n",
+    "                              \"Domain별정확도\", \"Domain별문제수\", \"Subdomain별정확도\", \"Subdomain별문제수\"]:\n",
+    "            # 업데이트할 시트가 아닌 경우 기존 데이터 읽기\n",
+    "            existing_sheets[sheet_name] = pd.read_excel(excel_path, sheet_name=sheet_name)\n",
+    "except:\n",
+    "    pass\n",
     "\n",
-    "# domain별 정확도 계산 (domain 컬럼이 있는 경우)\n",
-    "if 'domain' in df_sample.columns:\n",
-    "    domain_info = df_sample[[\"id\", \"domain\"]].copy()\n",
-    "    merged_with_domain = merged.merge(domain_info, on=\"id\", how=\"left\")\n",
+    "# 모든 시트를 새 파일로 저장\n",
+    "with pd.ExcelWriter(excel_path, engine=\"openpyxl\", mode='w') as writer:\n",
+    "    # 기존 시트 유지\n",
+    "    for sheet_name, df in existing_sheets.items():\n",
+    "        df.to_excel(writer, index=False, sheet_name=sheet_name)\n",
+    "    # 기본 시트들 업데이트\n",
+    "    df_sample.to_excel(writer, index=False, sheet_name=\"전체데이터\")\n",
+    "    pred_wide.to_excel(writer, index=False, sheet_name=\"모델별예측\")\n",
+    "    acc_by_model.to_excel(writer, index=False, sheet_name=\"정확도\")\n",
     "    \n",
-    "    domain_acc = (\n",
-    "        merged_with_domain.groupby([\"domain\", \"model_name\"], dropna=False)[\"correct\"]\n",
-    "        .mean()\n",
-    "        .reset_index()\n",
-    "        .pivot(index=\"domain\", columns=\"model_name\", values=\"correct\")\n",
-    "        .reset_index()\n",
-    "    )\n",
+    "    # subject별 정확도 계산 및 저장 (subject 컬럼이 있는 경우)\n",
+    "    if 'subject' in df_sample.columns:\n",
+    "        subject_info = df_sample[[\"id\", \"subject\"]].copy()\n",
+    "        merged_with_subject = merged.merge(subject_info, on=\"id\", how=\"left\")\n",
+    "        \n",
+    "        subject_acc = (\n",
+    "            merged_with_subject.groupby([\"subject\", \"model_name\"], dropna=False)[\"correct\"]\n",
+    "            .mean()\n",
+    "            .reset_index()\n",
+    "            .pivot(index=\"subject\", columns=\"model_name\", values=\"correct\")\n",
+    "            .reset_index()\n",
+    "        )\n",
+    "        \n",
+    "        subject_acc.to_excel(writer, index=False, sheet_name=\"Subject별정확도\")\n",
+    "        \n",
+    "        # Subject별 문제 수 통계\n",
+    "        subject_stats = df_sample.groupby('subject').size().reset_index(name='question_count')\n",
+    "        subject_stats.to_excel(writer, index=False, sheet_name=\"Subject별문제수\")\n",
     "    \n",
-    "    print(\"=\" * 80)\n",
-    "    print(\"🏆 Domain별 정확도\")\n",
-    "    print(\"=\" * 80)\n",
-    "    print(domain_acc.to_string(index=False))\n",
-    "    print()\n",
+    "    # domain별 정확도 계산 및 저장 (domain 컬럼이 있는 경우)\n",
+    "    if 'domain' in df_sample.columns:\n",
+    "        domain_info = df_sample[[\"id\", \"domain\"]].copy()\n",
+    "        merged_with_domain = merged.merge(domain_info, on=\"id\", how=\"left\")\n",
+    "        \n",
+    "        domain_acc = (\n",
+    "            merged_with_domain.groupby([\"domain\", \"model_name\"], dropna=False)[\"correct\"]\n",
+    "            .mean()\n",
+    "            .reset_index()\n",
+    "            .pivot(index=\"domain\", columns=\"model_name\", values=\"correct\")\n",
+    "            .reset_index()\n",
+    "        )\n",
+    "        \n",
+    "        domain_acc.to_excel(writer, index=False, sheet_name=\"Domain별정확도\")\n",
+    "        \n",
+    "        # Domain별 문제 수 통계\n",
+    "        domain_stats = df_sample.groupby('domain').size().reset_index(name='question_count')\n",
+    "        domain_stats.to_excel(writer, index=False, sheet_name=\"Domain별문제수\")\n",
     "    \n",
-    "    # Domain별 문제 수 통계\n",
-    "    domain_stats = df_sample.groupby('domain').size().reset_index(name='question_count')\n",
-    "    print(\"=\" * 80)\n",
-    "    print(\"📈 Domain별 문제 수\")\n",
-    "    print(\"=\" * 80)\n",
-    "    print(domain_stats.to_string(index=False))\n",
-    "    print()\n",
+    "    # subdomain별 정확도 계산 및 저장 (subdomain 컬럼이 있는 경우)\n",
+    "    if 'subdomain' in df_sample.columns:\n",
+    "        subdomain_info = df_sample[[\"id\", \"domain\", \"subdomain\"]].copy()\n",
+    "        merged_with_subdomain = merged.merge(subdomain_info, on=\"id\", how=\"left\")\n",
+    "        \n",
+    "        subdomain_acc = (\n",
+    "            merged_with_subdomain.groupby([\"domain\", \"subdomain\", \"model_name\"], dropna=False)[\"correct\"]\n",
+    "            .mean()\n",
+    "            .reset_index()\n",
+    "            .pivot(index=[\"domain\", \"subdomain\"], columns=\"model_name\", values=\"correct\")\n",
+    "            .reset_index()\n",
+    "        )\n",
+    "        \n",
+    "        subdomain_acc.to_excel(writer, index=False, sheet_name=\"Subdomain별정확도\")\n",
+    "        \n",
+    "        # Subdomain별 문제 수 통계\n",
+    "        subdomain_stats = df_sample.groupby(['domain', 'subdomain']).size().reset_index(name='question_count')\n",
+    "        subdomain_stats.to_excel(writer, index=False, sheet_name=\"Subdomain별문제수\")\n",
     "\n",
-    "# subdomain별 정확도 계산 (subdomain 컬럼이 있는 경우)\n",
-    "if 'subdomain' in df_sample.columns:\n",
-    "    subdomain_info = df_sample[[\"id\", \"domain\", \"subdomain\"]].copy()\n",
-    "    merged_with_subdomain = merged.merge(subdomain_info, on=\"id\", how=\"left\")\n",
-    "    \n",
-    "    subdomain_acc = (\n",
-    "        merged_with_subdomain.groupby([\"domain\", \"subdomain\", \"model_name\"], dropna=False)[\"correct\"]\n",
-    "        .mean()\n",
-    "        .reset_index()\n",
-    "        .pivot(index=[\"domain\", \"subdomain\"], columns=\"model_name\", values=\"correct\")\n",
-    "        .reset_index()\n",
-    "    )\n",
-    "    \n",
-    "    print(\"=\" * 80)\n",
-    "    print(\"📋 Subdomain별 정확도\")\n",
-    "    print(\"=\" * 80)\n",
-    "    print(subdomain_acc.to_string(index=False))\n",
-    "    print()\n",
-    "    \n",
-    "    # Subdomain별 문제 수 통계\n",
-    "    subdomain_stats = df_sample.groupby(['domain', 'subdomain']).size().reset_index(name='question_count')\n",
-    "    print(\"=\" * 80)\n",
-    "    print(\"📈 Subdomain별 문제 수\")\n",
-    "    print(\"=\" * 80)\n",
-    "    print(subdomain_stats.to_string(index=False))\n",
-    "    print()\n",
-    "\n",
-    "print(\"=\" * 80)\n",
-    "print(\"✅ 정확도 계산 완료\")\n",
-    "print(\"=\" * 80)"
+    "print(f\"✅ Excel 파일 업데이트 완료: {excel_path}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "eval",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -1228,7 +1119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
