--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -171,19 +171,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# import os\n",
+    "import os\n",
     "\n",
     "# # from_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/mock_exam/test\" \n",
-    "# from_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/tools/QueryModels.py'\n",
-    "# to_path = \"yjmoon@oci004:/home/yjmoon/src\"\n",
+    "from_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam'\n",
+    "to_path = \"yjmoon@oci004:/home/yjmoon/test\"\n",
     "\n",
     "\n",
     "# # 업로드\n",
-    "# os.system(f\"scp -r {from_path} {to_path}\")\n",
+    "os.system(f\"scp -r {from_path} {to_path}\")\n",
     "# # for ss in file:\n",
     "#     # os.system(f\"scp -r /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/data/FINAL/3C/Lv3_4/{ss} yjmoon@oci004:/home/yjmoon/FINAL/{ss}\")"
    ]
@@ -685,7 +696,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "internal",
    "language": "python",
    "name": "python3"
   },
@@ -699,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
