[251110] 배고파서 작전상 퇴근

--- a/test.ipynb
+++ b/test.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,6 +604,49 @@
     "        for exam in os.listdir(os.path.join(EXAM_DIR, exams)):\n",
     "            with open(os.path.join(EXAM_DIR, exams, exam), 'r', encoding='utf-8') as f:\n",
     "                fifth_exam += json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### gpt5 빈거 json으로 새로 만들기\n",
+    "q_tags = \"\"\"SS0087_q_0495_0001\n",
+    "SS0098_q_0828_0001\n",
+    "SS0098_q_0830_0002\n",
+    "SS0108_q_0222_0001\n",
+    "SS0118_q_0190_0002\n",
+    "SS0189_q_0209_0001\n",
+    "SS0190_q_0452_0001\n",
+    "SS0191_q_0592_0001\n",
+    "SS0193_q_0094_0001\n",
+    "SS0197_q_0078_0001\n",
+    "SS0207_q_0132_0002\n",
+    "SS0207_q_0182_0002\n",
+    "SS0208_q_0624_0002\n",
+    "SS0210_q_0109_0002\n",
+    "SS0215_q_0056_0001\n",
+    "SS0227_q_0487_0001\n",
+    "SS0250_q_0370_0004\n",
+    "SS0251_q_0199_0003\n",
+    "SS0260_q_0645_0003\n",
+    "SS03015_q_0113_0001\n",
+    "SS0394_q_0051_0001\n",
+    "SS0394_q_0055_0002\n",
+    "SS0394_q_0332_0002\n",
+    "SS0396_q_0048_0002\n",
+    "SS0397_q_0032_0001\n",
+    "SS0397_q_0077_0002\n",
+    "SS0397_q_0125_0003\n",
+    "SS0406_q_0143_0001\n",
+    "SS0412_q_0300_0003\n",
+    "SS0419_q_0008_0001\"\"\"\n",
+    "\n",
+    "\n",
+    "for first_q in first_exam:\n",
+    "    if first_q['file_id'] in q_tags:"
    ]
   },
   {
