--- a/json_rev.ipynb
+++ b/json_rev.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,26 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "# # from_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/mock_exam/test\" \n",
-    "from_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/evaluation/eval_data/4_multiple_exam'\n",
-    "to_path = \"yjmoon@oci004:/home/yjmoon/test\"\n",
+    "from_path = \"/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/4_multiple_exam\"\n",
+    "to_path = \"yjmoon@oci004:/home/yjmoon/\"\n",
     "\n",
     "\n",
     "# # 업로드\n",
@@ -238,202 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ISBN</th>\n",
-       "      <th>도서명</th>\n",
-       "      <th>출판일</th>\n",
-       "      <th>코퍼스 1분류</th>\n",
-       "      <th>코퍼스 2분류</th>\n",
-       "      <th>비고</th>\n",
-       "      <th>분류</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>관리번호</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>SS0001</th>\n",
-       "      <td>9791196259976</td>\n",
-       "      <td>보험, 진짜 필요할까? : 보험을 제대로 모르는 사람들을 위한 또박또박 보험가이드</td>\n",
-       "      <td>2018-03-29</td>\n",
-       "      <td>보험</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>시사</td>\n",
-       "      <td>Lv2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0002</th>\n",
-       "      <td>9791197848629</td>\n",
-       "      <td>5분에 만나는 표준약관 : 생명보험</td>\n",
-       "      <td>2022-04-15</td>\n",
-       "      <td>보험</td>\n",
-       "      <td>실무</td>\n",
-       "      <td>이론</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0003</th>\n",
-       "      <td>9791197848612</td>\n",
-       "      <td>5분에 만나는 표준약관 : 질병·상해보험(손해보험 회사용)</td>\n",
-       "      <td>2022-04-15</td>\n",
-       "      <td>보험</td>\n",
-       "      <td>실무</td>\n",
-       "      <td>이론</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0004</th>\n",
-       "      <td>9791198375902</td>\n",
-       "      <td>주식 가치평가를 위한 작은 책</td>\n",
-       "      <td>2023-07-20</td>\n",
-       "      <td>증권</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>시사</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0005</th>\n",
-       "      <td>9791192312620</td>\n",
-       "      <td>세계 인플레이션 시대의 경제지표</td>\n",
-       "      <td>2023-10-19</td>\n",
-       "      <td>금융</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>시사</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0264</th>\n",
-       "      <td>9788960543201</td>\n",
-       "      <td>알면 돈되는 보험 상품 100% 활용법</td>\n",
-       "      <td>2023-09-20</td>\n",
-       "      <td>보험</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>보험계약</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0265</th>\n",
-       "      <td>9791198974433</td>\n",
-       "      <td>2025 감정평가사 객관식 민법</td>\n",
-       "      <td>2024-11-04</td>\n",
-       "      <td>보험</td>\n",
-       "      <td>수험서</td>\n",
-       "      <td>감정평가사</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0266</th>\n",
-       "      <td>9791198804082</td>\n",
-       "      <td>2025 감정평가사 부동산학원론 객관식</td>\n",
-       "      <td>2024-09-03</td>\n",
-       "      <td>보험</td>\n",
-       "      <td>수험서</td>\n",
-       "      <td>감정평가사</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0267</th>\n",
-       "      <td>9791198804068</td>\n",
-       "      <td>2025 신바람 감정평가 관계법규 기출문제집</td>\n",
-       "      <td>2024-08-16</td>\n",
-       "      <td>보험</td>\n",
-       "      <td>수험서</td>\n",
-       "      <td>감정평가사</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS0268</th>\n",
-       "      <td>9788962491357</td>\n",
-       "      <td>위험관리와 보험</td>\n",
-       "      <td>2020-03-02</td>\n",
-       "      <td>보험</td>\n",
-       "      <td>기초</td>\n",
-       "      <td>리스크관리</td>\n",
-       "      <td>Lv3/4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>245 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 ISBN                                            도서명  \\\n",
-       "관리번호                                                                   \n",
-       "SS0001  9791196259976  보험, 진짜 필요할까? : 보험을 제대로 모르는 사람들을 위한 또박또박 보험가이드   \n",
-       "SS0002  9791197848629                            5분에 만나는 표준약관 : 생명보험   \n",
-       "SS0003  9791197848612               5분에 만나는 표준약관 : 질병·상해보험(손해보험 회사용)   \n",
-       "SS0004  9791198375902                               주식 가치평가를 위한 작은 책   \n",
-       "SS0005  9791192312620                              세계 인플레이션 시대의 경제지표   \n",
-       "...               ...                                            ...   \n",
-       "SS0264  9788960543201                          알면 돈되는 보험 상품 100% 활용법   \n",
-       "SS0265  9791198974433                              2025 감정평가사 객관식 민법   \n",
-       "SS0266  9791198804082                          2025 감정평가사 부동산학원론 객관식   \n",
-       "SS0267  9791198804068                       2025 신바람 감정평가 관계법규 기출문제집   \n",
-       "SS0268  9788962491357                                       위험관리와 보험   \n",
-       "\n",
-       "              출판일 코퍼스 1분류 코퍼스 2분류     비고     분류  \n",
-       "관리번호                                             \n",
-       "SS0001 2018-03-29      보험      기초     시사    Lv2  \n",
-       "SS0002 2022-04-15      보험      실무     이론  Lv3/4  \n",
-       "SS0003 2022-04-15      보험      실무     이론  Lv3/4  \n",
-       "SS0004 2023-07-20      증권      기초     시사  Lv3/4  \n",
-       "SS0005 2023-10-19      금융      기초     시사  Lv3/4  \n",
-       "...           ...     ...     ...    ...    ...  \n",
-       "SS0264 2023-09-20      보험      기초   보험계약  Lv3/4  \n",
-       "SS0265 2024-11-04      보험     수험서  감정평가사  Lv3/4  \n",
-       "SS0266 2024-09-03      보험     수험서  감정평가사  Lv3/4  \n",
-       "SS0267 2024-08-16      보험     수험서  감정평가사  Lv3/4  \n",
-       "SS0268 2020-03-02      보험      기초  리스크관리  Lv3/4  \n",
-       "\n",
-       "[245 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tools.ProcessFiles as pf\n",
     "\n",
@@ -443,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,6 +480,193 @@
     "print(f\"[병합] 병합된 파일 저장: {model_name}\")\n",
     "print(f\"[병합] ✓ 병합 완료!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Qwen3 정제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_think_block(text):\n",
+    "    import re   ## for Qwen3\n",
+    "    if isinstance(text, str):\n",
+    "        return re.sub(r\"<think>.*?</think>\\s*\", \"\", text, flags=re.DOTALL)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_answer(text):\n",
+    "    import re\n",
+    "    if isinstance(text, str):\n",
+    "        # 파일에서 리터럴 \\t (백슬래시+t)를 사용하므로 \\\\\\\\t로 매칭\n",
+    "        # [^\\s\\n]+ 로 탭 이후 공백/줄바꿈이 아닌 모든 문자 매칭 (더 유연하게)\n",
+    "        # 이렇게 하면 {번호} 같은 특수 형식도 포함됨\n",
+    "        return re.findall(r\"SS\\d+_q_\\d+_\\d+\\\\\\\\t[^\\s\\n]+\", text)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/model_output__srv4-data_vanilla_models_Qwen3-32B.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    txt = f.read()\n",
+    "\n",
+    "txt = remove_think_block(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txt = [t.strip() for t in txt.split(\"================================================================================\") if t.startswith(\"\\nSS\")]\n",
+    "# print(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>/srv4-data/vanilla_models/Qwen3-32B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SS0087_q_0284_0001</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SS0087_q_0298_0002</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SS0087_q_0300_0002</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SS0087_q_0312_0001</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SS0087_q_0317_0002</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   id  /srv4-data/vanilla_models/Qwen3-32B\n",
+       "0  SS0087_q_0284_0001                                    0\n",
+       "1  SS0087_q_0298_0002                                    0\n",
+       "2  SS0087_q_0300_0002                                    0\n",
+       "3  SS0087_q_0312_0001                                    0\n",
+       "4  SS0087_q_0317_0002                                    0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Excel 파일에서 정확도 계산 (전체, subject별, domain별, subdomain별)\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from typing import Set\n",
+    "import ast\n",
+    "\n",
+    "# Excel 파일 경로 설정\n",
+    "excel_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/1st_evaluation_Qwen3-32B.xlsx'\n",
+    "\n",
+    "# Excel 파일 읽기\n",
+    "df_sample = pd.read_excel(excel_path, sheet_name='전체데이터')\n",
+    "pred_wide = pd.read_excel(excel_path, sheet_name='모델별예측')\n",
+    "\n",
+    "pred_wide.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/z3/4h8q07hj2l7fsr4chwmfg9xw0000gn/T/ipykernel_9606/2285650317.py:5: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value 'B' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  pred_wide.loc[pred_wide['id'] == new_t[0], '/srv4-data/vanilla_models/Qwen3-32B'] = new_t[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in txt:\n",
+    "    t = t.replace('\\\\t', '<TAB>').replace('\\t', '<TAB>')\n",
+    "    new_t = t.split('<TAB>')\n",
+    "    if len(new_t) == 2:\n",
+    "        pred_wide.loc[pred_wide['id'] == new_t[0], pred] = new_t[1]\n",
+    "# pred_wide.head()\n",
+    "pred_wide.to_excel(excel_path.replace('.xlsx', '_new.xlsx'), sheet_name='모델별예측', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
