--- a/test.ipynb
+++ b/test.ipynb
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,52 +608,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4957 241 4716\n"
+     ]
+    }
+   ],
    "source": [
-    "### gpt5 빈거 json으로 새로 만들기\n",
-    "q_tags = \"\"\"SS0087_q_0495_0001\n",
-    "SS0098_q_0828_0001\n",
-    "SS0098_q_0830_0002\n",
-    "SS0108_q_0222_0001\n",
-    "SS0118_q_0190_0002\n",
-    "SS0189_q_0209_0001\n",
-    "SS0190_q_0452_0001\n",
-    "SS0191_q_0592_0001\n",
-    "SS0193_q_0094_0001\n",
-    "SS0197_q_0078_0001\n",
-    "SS0207_q_0132_0002\n",
-    "SS0207_q_0182_0002\n",
-    "SS0208_q_0624_0002\n",
-    "SS0210_q_0109_0002\n",
-    "SS0215_q_0056_0001\n",
-    "SS0227_q_0487_0001\n",
-    "SS0250_q_0370_0004\n",
-    "SS0251_q_0199_0003\n",
-    "SS0260_q_0645_0003\n",
-    "SS03015_q_0113_0001\n",
-    "SS0394_q_0051_0001\n",
-    "SS0394_q_0055_0002\n",
-    "SS0394_q_0332_0002\n",
-    "SS0396_q_0048_0002\n",
-    "SS0397_q_0032_0001\n",
-    "SS0397_q_0077_0002\n",
-    "SS0397_q_0125_0003\n",
-    "SS0406_q_0143_0001\n",
-    "SS0412_q_0300_0003\n",
-    "SS0419_q_0008_0001\"\"\"\n",
+    "ct = 0\n",
     "\n",
+    "for m in multiple:\n",
+    "    if m['explanation'] == \"\":\n",
+    "        ct += 1\n",
     "\n",
-    "for first_q in first_exam:\n",
-    "    if first_q['file_id'] in q_tags:"
+    "print(len(multiple), ct, len(multiple) - ct)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전체: 4957\n",
+      "옳은 것은? (단일 선택): 1963\n",
+      "옳지 않은 것은? (단일 선택): 2672\n",
+      "옳은 것을 모두 고른 것은? (다중 선택): 322\n",
+      "갯수 일치 여부: True\n"
+     ]
+    }
+   ],
    "source": [
     "multiple = first_exam + second_exam + third_exam + fourth_exam + fifth_exam\n",
     "\n",
@@ -980,14 +972,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Excel 파일 업데이트 완료: /Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gemini-2.0-flash-001.xlsx\n"
+      "✅ Excel 파일 업데이트 완료: /Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/1st_evaluation_Qwen3-32B.xlsx\n"
      ]
     }
    ],
@@ -999,7 +991,8 @@
     "import ast\n",
     "\n",
     "# Excel 파일 경로 설정\n",
-    "excel_path = '/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_gemini-2.0-flash-001.xlsx'\n",
+    "# excel_path = '/Users/jinym/Library/CloudStorage/OneDrive-개인/데이터L/selectstar/evaluation/eval_data/6_exam_evaluation/1st_evaluation_Qwen3-32B.xlsx'\n",
+    "excel_path = '/Users/jinym/Desktop/Desktop_AICenter✨/SFAIcenter/oci_result/1st_evaluation_Qwen3-32B.xlsx'\n",
     "\n",
     "# Excel 파일 읽기\n",
     "df_sample = pd.read_excel(excel_path, sheet_name='전체데이터')\n",
@@ -1144,6 +1137,13 @@
     "\n",
     "print(f\"✅ Excel 파일 업데이트 완료: {excel_path}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
